methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:14: error: Unit does not take parameters
run(){  for(i<- 1 to 7)
     ^